compiler/testData/diagnostics/tests/controlStructures/kt53987.fir.kt
fun box(): String {
    return if (true) <!TYPE_MISMATCH!>{
        val a = 1
    }<!> else {
        "fail:"
    }
}
